# programming_2025

./: .gitmodules
lecture01_basics/: func.cpp  func.hpp  main.cpp
lecture02_operation_with_vars/: CMakeLists.txt  main.cpp
lecture03_condition_and_cycles/: CMakeLists.txt  main.cpp
lecture04_cycles/: main.cpp
lecture04_cycles_and_arrays/: CMakeLists.txt  main.cpp
lecture05_cycles_and_arrays/: CMakeLists.txt  main.cpp
lecture06_functions/: CMakeLists.txt  func.cpp  func.hpp  main.cpp
lecture07_functions_x2/: CMakeLists.txt  func.cpp  func.hpp  main.cpp  math.cpp  math.hpp
lecture08_work_with_memory/: main.cpp
lecture09_work_with_memory_x2/: CMakeLists.txt  geometry.cpp  geometry.hpp  graphics.cpp  graphics.hpp  main.cpp  some_functions.cpp  some_functions.hpp
lecture10_const_ref_n_arrays/: CMakeLists.txt  main.cpp
lecture11_structures_and_lists/: CMakeLists.txt  main.cpp
lecture12_strings/: CMakeLists.txt  main.cpp
lecture13_recursion/: CMakeLists.txt  main.cpp
lecture14/: CMakeLists.txt  main.cpp  main2.cpp
lecture15_intro_oop/: Car.cpp  Car.hpp  main.cpp
lecture16_intro_oop_2/: CMakeLists.txt  main.cpp
lecture17_libs_linking/: CMakeLists.txt
lecture17_libs_linking/app/: main.cpp
lecture17_libs_linking/app_shared/: CMakeLists.txt
lecture17_libs_linking/gui_app/: mainwindow.cpp
lecture17_libs_linking/mylib/: CMakeLists.txt
lecture17_libs_linking/mylib/inc/: functions.hpp
lecture17_libs_linking/mylib/src/: functions.cpp
lecture17_libs_linking/mylib_shared/: CMakeLists.txt
lecture17_libs_linking/mylib_shared/src/: functions.cpp
lecture18_1/: main.cpp
lecture18_qt_start_n_operator_overloading/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lecture19_operators_overloading/: CMakeLists.txt
lecture19_operators_overloading/app/: main.cpp
lecture19_operators_overloading/app_shared/: main.cpp
lecture19_operators_overloading/gui_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
lecture19_operators_overloading/mylib/inc/: functions.hpp
lecture19_operators_overloading/mylib/src/: functions.cpp
lecture19_operators_overloading/mylib_shared/: CMakeLists.txt
lecture19_operators_overloading/mylib_shared/inc/: functions.hpp
lecture19_operators_overloading/mylib_shared/src/: functions.cpp
lecture20_operators_overloading/: CMakeLists.txt
lecture20_operators_overloading/app/: CMakeLists.txt  main.cpp
lecture20_operators_overloading/gui_app/: mainwindow.cpp
lecture20_operators_overloading/mylib/: CMakeLists.txt
lecture20_operators_overloading/mylib/inc/: functions.hpp
lecture20_operators_overloading/mylib/src/: functions.cpp
lecture21_inferitance/: main.cpp
lecture22_inheritance_2/: main.cpp
lecture23_factory_facade/: CMakeLists.txt  main.cpp
lecture24_smart_pointers/: main.cpp
lecture25_networks/: CMakeLists.txt
lecture25_networks/synchro_client/: CMakeLists.txt  client.cpp
lecture25_networks/synchro_server/: CMakeLists.txt  server.cpp
lecture26_networks_2/meteo/: CMakeLists.txt
lecture26_networks_2/meteo/inc/meteo/: formats.hpp
lecture26_networks_2/synchro_client/: CMakeLists.txt  client.cpp
lecture26_networks_2/synchro_server/: CMakeLists.txt  server.cpp
lecture27_networks_3/: CMakeLists.txt
lecture27_networks_3/meteo/inc/meteo/: formats.hpp
lecture27_networks_3/synchro_client/: CMakeLists.txt  client.cpp  config.json
lecture27_networks_3/synchro_server/: CMakeLists.txt  server.cpp
x_client_example/: Dockerfile  main.c  tutorial.txt
